src/css/base.css
/* ... */
    .btnAlt:hover{
        background: #0096ff;

}
.btnGreen, a.btnGreen{
    background: #64c51c;
    border-bottom: 4px solid #46b314;
}
    .btnGreen:hover{
        background: #46b314;

}
#navigation, #main{
    background: #fffffe;
}
#main{
     position: relative;
}
/* header
---------------------------*/
#navigation{
    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
    z-index: 80;
    position: relative;

	/* Issue ID: I-113951 - Set to the higher value than the footer
	so the menu won't cut off when the page contains only small content */
    z-index: 100001;
    left: 0;
    top: 0;
    right: 0;
    background: #fffffe;
    behavior: url(./wp-content/themes/tcs-responsive/css/PIE.htc);
}
#navigation, #navigation > .container{
    height: 94px;
}
.logo{
    position: absolute;
    left: 0;
    top: 27px;
    width: 330px;
    height: 58px;
    background: url(@@cdn/i/logo.png) 0 0 no-repeat;
}
    .logo a{
        display: block;
        height: 52px;
        -moz-transition-duration: 0s; -webkit-transition-duration: 0s; transition-duration: 0s;
}

#mainNav{
    z-index: 10;
    position: absolute;
    right: 156px;
    top: 50px;
}
    #mainNav .root{
        min-height: 34px;
    }
    #mainNav .root > li{
        margin-left: 8px;
        float: left;

        position: relative;
}
     #mainNav .root > li > .child{

        display: none;
}
     /*#mainNav .root > li:hover > .child{
       display: block;
}
    #mainNav .root > li.hover > .child{
       margin-top: 0;
}*/
     #mainNav .root .child{
         display: block;
         background: #FF8A00;
         min-width: 80px;
         position: absolute;
         min-width: 100%;
         left: 15px;
}

        #mainNav .root > li a{
            padding: 0 10px 12px 15px;
            color: #666;
            -moz-transition-duration: .3s;
            -webkit-transition-duration: .3s;
            transition-duration: .3s;
            height: 32px;
            line-height: 32px;
            display: block;
            min-width: 55px;
            font-weight: bold;
}
        #mainNav .root .child > li{
            padding: 0 10px;
        			width: 175px;
            border-top: 1px solid #FF7A00;
}
        #mainNav .root .child a{

            padding: 0 6px 0 0;
            margin: 0 -10px;
            text-indent: 15px;
            display: block;
            font-size: 12px;
            min-width: 0;
            font-weight: normal;
            color: #fff;
            white-space: nowrap;
}
        #mainNav .root .child li:hover{
    background: #F00;
        }
        #mainNav .root > li:hover a{
            text-decoration: none;
}

#navigation .btnRegister{
    position: absolute;
    right: 0;
    top: 49px;
}
#navigation .btnMyAcc{
    position: absolute;
    right: 0;
    top: 49px;
    padding-right: 24px;
    width: 106px;
}
    .btnMyAcc i{
        display: inline-block;
        width: 16px;
        height: 9px;
        position: absolute;
        right: 13px;
        top: 13px;
        background: url(@@cdn/i/ico-arrow.png) no-repeat;
        background-position: 0 0;
        transition-duration: 0.3s;
        cursor: pointer;
}
    .btnMyAcc.isActive i{
        background-position: 0 -12px;
    }
/* Page Title
---------------------------*/
.pageTitleWrapper {
	height: 65px;
	margin-bottom: 41px;
	background-color: #eeeeee;
}
	.pageTitleWrapper .pageTitle{
		height: 65px;
		position: relative;
	}
		.pageTitleWrapper .pageTitle h2{
			position: absolute;
			top: 0;
			left: 1px;
			padding: 7px 0 21px 70px;
			line-height: 58px;
			background-image: url(@@cdn/i/ico-title.png);
			background-repeat: no-repeat;
			background-position: 0 0;
			color: #666666;
			font-size: 30px;
		}
		.pageTitleWrapper .pageTitle h2.overviewPageTitle{
			background-position: 0 0;
		}
		.pageTitleWrapper .pageTitle h2.casePageTitle{
			background-position: 0 -90px;
		}
		.pageTitleWrapper .pageTitle h2.pressReleasePageTitle{
			background-position: 0 -180px;
		}
		.pageTitleWrapper .pageTitle h2.resourcePageTitle{
			background-position: 0 -270px;
		}
		.pageTitleWrapper .pageTitle h2.storyPageTitle{
			background-position: 0 -360px;
		}
		.pageTitleWrapper .pageTitle .backLink{
			float: right;
			font-size: 16px;
			font-weight: 300;
			margin-top: 24px;
		}
/* footer
---------------------------*/
footer {
  font-family: "Merriweather Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.bottom-footer {
  background-color: #3D3D3D;
  padding: 1px 20px 30px 20px; }

.social-links {
  font-size: 13px;
  line-height: 1.2em;
  text-align: center;
  font-weight: normal;
  margin: 35px 0;
  color: #fff; }
  .social-links a {
    display: inline-block;
    background-size: contain;
    background-repeat: no-repeat;
    margin: 23px 0; }
    .social-links a + a {
      margin-left: 30px; }

.copyright-notice {
  text-align: center;
  font-size: 12px;
  line-height: 14px;
  color: #656565; }

@media only screen and (max-width: 1024px) {
  .bottom-footer, .fold-pusher {
    height: 170px; }
  .bottom-footer .menu-item {
    display: none;
    margin-top: 30px; }
  .menu-visible .bottom-footer .menu-item {
    display: block; }
  .social-links .fb-link {
    background-image: url(@@cdn/i/ico-facebook.svg);
    width: 27px;
    height: 27px; }
  .social-links .twitter-link {
    background-image: url(@@cdn/i/ico-twitter.svg);
    width: 28px;
    height: 24px; }
  .social-links .linkedin-link {
    background-image: url(@@cdn/i/ico-linkedin.svg);
    width: 27px;
    height: 27px; }
  .social-links .google-link {
    background-image: url(@@cdn/i/ico-google.svg);
    width: 27px;
    height: 27px; } }
/* ... */

